...
            "state" : "translated",
            "value" : "Änderungsdatum"
          }
        }
      }
    },
    "Delete" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Löschen"
          }
...
            "state" : "translated",
            "value" : "Beschreibung hier eingeben"
          }
        }
      }
    },
    "Enter the issue title here" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Beitragstitel hier eingenen"
          }
...
            "state" : "translated",
            "value" : "Hole Angebote ..."
          }
        }
      }
    },
    "Filter" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter"
          }
...
            "state" : "translated",
            "value" : "Beiträge filtern oder # um Tag auszuwählen"
          }
        }
      }
    },
    "Filters" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Filter"
          }
...
            "state" : "translated",
            "value" : "Holen Sie das Beste aus unserer App."
          }
        }
      }
    },
    "High" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Hoch"
          }
...
            "state" : "translated",
            "value" : "In-app Käufe sind deaktiviert"
          }
        }
      }
    },
    "Issues" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Beiträge"
          }
        }
      }
    },
    "Locked" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Nicht freigeschaltet"
          }
...
            "state" : "translated",
            "value" : "Niedrig"
          }
        }
      }
    },
    "Medium" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Mittel"
          }
        }
      }
    },
    "New Issue" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Neuer Beitrag"
          }
...
            "state" : "translated",
            "value" : "Keine Tags"
          }
        }
      }
    },
    "OK" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "OK"
          }
...
            "state" : "translated",
            "value" : "Käufe wiederherstellen"
          }
        }
      }
    },
    "Show awards" : {
      "localizations" : {
        "de" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Zeige Auszeichnungen"
          }
...
